--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,3 +1,5 @@
 <% @employees.each do |employee| %>
 <%= link_to employee.full_name, employee_path(employee) %><br>
 <% end %>
+<br><br>
+<%= link_to "New", new_employee_path %>
