--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -19,6 +19,6 @@
 <%= f.label :img_url %>
 <%= f.text_field :img_url %><br><br>
 
-Dog: <%= f.collection_select(:dog_id, Dog.all, :id, :name) %>
+Dog: <%= f.collection_select(:dog_id, @all_dogs, :id, :name) %>
 <%= f.submit "Create Employee" %>
 <% end %>
